--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,19 @@ main#app section.even .card .card-body {
 }
 
 /* FOOTER */
+footer {
+    color: white;
+  padding: 30px 0;
+  background-color: #0458ad;
+}
+footer .contact {
+  height: 60px;
+  margin-top: -30px;
+  margin-bottom: 30px;
+  color: white;
+  background-color: #222222;
+}
+footer .contact a {
+  color: white;
+  text-decoration: underline;
+}
